# XPT2046_touchCalibrator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xpt-install.sh
installation/: calibrate.sh  configure_gui_service.sh  install.sh  install_uinput_service.sh  uninstall.sh  xpt-calibrate.sh  xpt-install.sh
installation/systemd/: xpt-uinputd.service
src/: advanced_gui.cpp  basic_gui.cpp  xpt2046_calibrator.cpp  xpt2046_uinputd.cpp
